--- a/CameraApp/CameraApp/Resources/layout/Main.axml
+++ b/CameraApp/CameraApp/Resources/layout/Main.axml
@@ -1,7 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    >
-</LinearLayout>
+<RelativeLayout xmlns:p1="http://schemas.android.com/apk/res/android"
+    p1:minWidth="25px"
+    p1:minHeight="25px"
+    p1:layout_width="match_parent"
+    p1:layout_height="match_parent"
+    p1:id="@+id/relativeLayout1">
+    <VideoView
+        p1:id="@+id/videoView"
+        p1:layout_height="fill_parent"
+        p1:layout_width="fill_parent" />
+    <LinearLayout
+        p1:layout_width="wrap_content"
+        p1:layout_height="wrap_content"
+        p1:id="@+id/ControlLayout">
+        <Button
+            p1:text="Record"
+            p1:id="@+id/recordBtn"
+            p1:layout_width="wrap_content"
+            p1:layout_height="wrap_content" />
+        <Button
+            p1:text="Stop"
+            p1:id="@+id/stopBtn"
+            p1:layout_width="wrap_content"
+            p1:layout_height="wrap_content" />
+        <Button
+            p1:text="Play"
+            p1:id="@+id/playBtn"
+            p1:layout_width="wrap_content"
+            p1:layout_height="wrap_content" />
+    </LinearLayout>
+</RelativeLayout>
